Updated Webgl Problem with Chrome version!

--- a/Corruption-html/war/index.html
+++ b/Corruption-html/war/index.html
@@ -11,7 +11,7 @@
 		</style>
 	</head>
 	
-	<body>
+	<body oncontextmenu="return false;">
 		<div align="center" id="embed-com.me.corruption.GwtDefinition"></div>
 		<script type="text/javascript" src="com.me.corruption.GwtDefinition/com.me.corruption.GwtDefinition.nocache.js"></script>
 	</body>
